# se-toolkit-hackathon

./: LICENSE  README.md
SETproject/: .dockerignore  .env.docker.example  .gitignore  AGENTS.md  PROJECT_IDEA.md  docker-compose.yml  pyproject.toml
SETproject/backend/: .dockerignore  .env.example  .env.tests.e2e.example  .env.tests.unit.example  Dockerfile  PSPRICING_SETUP.md  pyproject.toml
SETproject/backend/src/app/: __init__.py  alembic_instructions.md  database.py  init_db.sql  main.py  run.py  scheduler.py  seed.py  settings.py
SETproject/backend/src/app/auth/: deps.py  utils.py
SETproject/backend/src/app/data/: init.sql
SETproject/backend/src/app/db/: __init__.py  base.py
SETproject/backend/src/app/models/: game.py  user.py
SETproject/backend/src/app/routers/: auth.py  favorites.py  games.py
SETproject/backend/src/app/schemas/: auth.py  game.py
SETproject/backend/src/app/services/: price_sync.py  pspricing.py
SETproject/backend/tests/unit/: test_health.py
SETproject/caddy/: Caddyfile
SETproject/frontend-user/: Dockerfile  next.config.ts  package.json
SETproject/frontend-user/src/app/: AuthNav.tsx  AuthProvider.tsx  globals.css  layout.tsx  page.tsx  (+1 more)
SETproject/mcp/mcp-games/: pyproject.toml
SETproject/mcp/mcp-games/src/mcp_games/: __init__.py  __main__.py
SETproject/nanobot/: Dockerfile  config.template.json  entrypoint.py  pyproject.toml  websocket_bridge.py
SETproject/nanobot/workspace/: skill_prompt.md
SETproject/nanobot/workspace/cron/: jobs.json
SETproject/nanobot/workspace/skills/lms/: SKILL.md
SETproject/nanobot/workspace/skills/observability/: SKILL.md
(+6 files in other folders)
