[project]
name = "nanobot-lab"
version = "0.1.0"
description = "Nanobot for LMS Lab 8"
requires-python = ">=3.14"
dependencies = [
    "nanobot-ai @ https://github.com/HKUDS/nanobot/archive/e7d371ec1e6531b28898ec2c869ef338e8dd46ec.zip",
]

[tool.uv.sources]
nanobot-ai = { url = "https://github.com/HKUDS/nanobot/archive/e7d371ec1e6531b28898ec2c869ef338e8dd46ec.zip" }
