[project]
name = "mcp-games"
version = "0.1.0"
description = "MCP server for game catalog queries"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.12.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_games*"]
